--- a/src/renderer/index.css
+++ b/src/renderer/index.css
@@ -3,3 +3,10 @@ body {
   padding: 0px;
   list-style: none;
 }
+
+#root {
+  height: 100vh;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+}
